tenzir/integration/data/reference/parser/test_control_flow/step_00.ref
error: expected one of: identifier, `this`, `}`, `|`, newline
 --> /dev/stdin:2:1
  |
2 | if b == 42 {
  | ^^ got `if`
  |